# circuitbreaker-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile  README.md
benches/: throughput.rs
examples/: advanced.rs  basic.rs
src/: breaker.rs  config.rs  error.rs  hook.rs  lib.rs  metrics.rs  policy.rs  prelude.rs  state.rs
tests/: integration.rs
